--- a/packages/components/src/index.module.css
+++ b/packages/components/src/index.module.css
@@ -100,6 +100,7 @@
   --z-index-application-banner: 101;
   --z-index-modal-overlay: 1040;
   --z-index-notification-banner: 1051;
+  --z-index-dropdown-menu: 1052;
 }
 
 @custom-media --extra-small-viewport (width < 375px);
